[tool.poetry]
name = "studienarbeit"
version = "0.1.1"
description = "The studienarbeit is a scientific paper which is written in the 5th and 6th semester at the DHBW."
authors = [
  "Felix Hoffmann <felix.emmanuel.hoffmann@gmail.com>",
  "Leopold Fuchs <kontakt@leopold-fuchs.de>",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
pyarrow = "^10.0.1"
openpyxl = "^3.0.10"
seaborn = "^0.12.2"
nltk = "^3.8.1"
spacy = "^3.5.0"
de-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.5.0/de_core_news_md-3.5.0.tar.gz"}
polars = "^0.16.2"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.8.0" }
isort = "^5.10.1"
mypy = "^0.981"
pylint = "^2.15.3"
flake8 = "^5.0.4"
autopep8 = "^1.7.0"
pre-commit = "^2.20.0"
jupyter = "^1.0.0"

[tool.mypy]
mypy_path = 'studienarbeit'
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 120
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"

[tool.pylint]
disable = "missing-module-docstring, broad-except, missing-class-docstring"
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
